Rebrand: Replace Eston with FWC in titles and meta descriptions, simplify Happy Users section

--- a/services.html
+++ b/services.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Services || Eston || Eston HTML 5 Template </title>
+    <title>FWC</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Eston HTML 5 Template " />
+    <meta name="description" content="FWC - Fourth Wall Communications" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -209,126 +209,25 @@
                     </div>
                 </div>
                 <div class="testimonial-three__bottom">
-                    <div class="testimonial-three__carousel owl-carousel owl-theme thm-owl__carousel" data-owl-options='{
-                            "loop": true,
-                            "autoplay": true,
-                            "margin": 45,
-                            "nav": true,
-                            "dots": false,
-                            "smartSpeed": 500,
-                            "autoplayTimeout": 10000,
-                            "navText": ["<span class=\"icon-up\"></span>","<span class=\"icon-up\"></span>"],
-                            "responsive": {
-                                "0": {
-                                    "items": 1
-                                },
-                                "768": {
-                                    "items": 2
-                                },
-                                "992": {
-                                    "items": 2
-                                },
-                                "1320": {
-                                    "items": 3
-                                }
-                            }
-                        }'>
-                        <!-- Testimonial Two Single Start -->
-                        <div class="item">
-                            <div class="testimonial-two__single">
-                                <div class="testimonial-two__quote">
-                                    <img src="assets/images/icon/testimonial-two-quote-icon.png" alt="">
-                                </div>
-                                <div class="testimonial-two__retting">
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                </div>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
+                    <!-- Single Testimonial with Rating Only -->
+                    <div class="testimonial-two__single" style="max-width: 400px; margin: 0 auto;">
+                        <div class="testimonial-two__retting" style="margin-bottom: 15px;">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <div class="testimonial-two__client-img-and-info">
+                            <div class="testimonial-two__client-img">
+                                <img src="assets/images/testimonial/testimonial-2-1.jpg" alt="">
                             </div>
-                            <p class="testimonial-two__text">“ Really glad to be working with
-                                Fourth Wall Communications. They've been anything less
-                                than supportive of me or my
-                                endeavors as I branch out into
-                                acting and auditioning! “</p>
-                            <div class="testimonial-two__client-img-and-info">
-                                <div class="testimonial-two__client-img">
-                                    <img src="assets/images/testimonial/testimonial-2-1.jpg" alt="">
-                                </div>
-                                <div class="testimonial-two__client-info">
-                                    <h3>Maklon H. Hilix</h3>
-                                    <p>Head Of Idea</p>
-                                </div>
+                            <div class="testimonial-two__client-info">
+                                <h3>Maklon H. Hilix</h3>
                             </div>
                         </div>
                     </div>
-                    <!-- Testimonial Two Single End -->
-                    <!-- Testimonial Two Single Start -->
-                    <div class="item">
-                        <div class="testimonial-two__single">
-                            <div class="testimonial-two__quote">
-                                <img src="assets/images/icon/testimonial-two-quote-icon.png" alt="">
-                            </div>
-                            <div class="testimonial-two__retting">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                            <p class="testimonial-two__text">“ Really glad to be working with
-                                Fourth Wall Communications. They've been anything less
-                                than supportive of me or my
-                                endeavors as I branch out into
-                                acting and auditioning! “</p>
-                            <div class="testimonial-two__client-img-and-info">
-                                <div class="testimonial-two__client-img">
-                                    <img src="assets/images/testimonial/testimonial-2-2.jpg" alt="">
-                                </div>
-                                <div class="testimonial-two__client-info">
-                                    <h3>Kavin M. Hilix</h3>
-                                    <p>Head Of Idea</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Testimonial Two Single End -->
-                    <!-- Testimonial Two Single Start -->
-                    <div class="item">
-                        <div class="testimonial-two__single">
-                            <div class="testimonial-two__quote">
-                                <img src="assets/images/icon/testimonial-two-quote-icon.png" alt="">
-                            </div>
-                            <div class="testimonial-two__retting">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                            <p class="testimonial-two__text">“ Really glad to be working with
-                                Fourth Wall Communications. They've been anything less
-                                than supportive of me or my
-                                endeavors as I branch out into
-                                acting and auditioning! “</p>
-                            <div class="testimonial-two__client-img-and-info">
-                                <div class="testimonial-two__client-img">
-                                    <img src="assets/images/testimonial/testimonial-2-3.jpg" alt="">
-                                </div>
-                                <div class="testimonial-two__client-info">
-                                    <h3>Alesha Martin</h3>
-                                    <p>Head Of Idea</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Testimonial Two Single End -->
+                    <!-- Testimonial End -->
                 </div>
             </div>
     </div>
