Add pricing section to services.html
bc

--- a/services.html
+++ b/services.html
@@ -232,7 +232,67 @@
             </div>
     </div>
     </section>
-    <!--Testimonial Two End-->
+    <!--Testimonial Two End--> 
+    
+    <!-- Pricing Section Start -->
+<section class="pricing-section">
+    <div class="container">
+        <div class="section-title text-center">
+            <p class="section-title__tagline">Pricing</p>
+            <h2 class="section-title__title">Our Video Packages</h2>
+        </div>
+
+        <div class="row justify-content-center">
+
+            <!-- Starter Plan -->
+            <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="100ms">
+                <div class="pricing-card starter">
+                    <h3>Starter</h3>
+                    <div class="price">₹1,500</div>
+                    <ul>
+                        <li>1 Minute Video</li>
+                        <li>Basic Editing</li>
+                        <li>1 Location Shoot</li>
+                        <li>Royalty-Free Music</li>
+                    </ul>
+                    <a href="contact.html" class="thm-btn">Get Started</a>
+                </div>
+            </div>
+
+            <!-- Professional Plan -->
+            <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="200ms">
+                <div class="pricing-card professional active">
+                    <h3>Professional</h3>
+                    <div class="price">₹3,500</div>
+                    <ul>
+                        <li>3–4 Minute Video</li>
+                        <li>Advanced Editing</li>
+                        <li>Multi-Location Shoot</li>
+                        <li>Motion Graphics</li>
+                    </ul>
+                    <a href="contact.html" class="thm-btn">Choose Plan</a>
+                </div>
+            </div>
+
+            <!-- Premium Plan -->
+            <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+                <div class="pricing-card premium">
+                    <h3>Premium</h3>
+                    <div class="price">₹6,500</div>
+                    <ul>
+                        <li>5–7 Minute Video</li>
+                        <li>Cinematic Quality</li>
+                        <li>Drone & 4K Footage</li>
+                        <li>Full Concept Development</li>
+                    </ul>
+                    <a href="contact.html" class="thm-btn">Get The Best</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+<!-- Pricing Section End -->
 
     <!--Site Footer Start-->
     <footer class="site-footer site-footer-three">
@@ -290,7 +350,6 @@
         </div>
     </footer>
     <!--Site Footer End-->
-
 
     </div><!-- /.page-wrapper -->
 
