--- a/services.html
+++ b/services.html
@@ -248,7 +248,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                 <div class="pricing-card starter">
                     <h3>Starter</h3>
-                    <div class="price">₹1,500</div>
+                    <div class="price">$1,500</div>
                     <ul>
                         <li>1 Minute Video</li>
                         <li>Basic Editing</li>
@@ -263,7 +263,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="200ms">
                 <div class="pricing-card professional active">
                     <h3>Professional</h3>
-                    <div class="price">₹3,500</div>
+                    <div class="price">$3,500</div>
                     <ul>
                         <li>3–4 Minute Video</li>
                         <li>Advanced Editing</li>
@@ -278,7 +278,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
                 <div class="pricing-card premium">
                     <h3>Premium</h3>
-                    <div class="price">₹6,500</div>
+                    <div class="price">$6,500</div>
                     <ul>
                         <li>5–7 Minute Video</li>
                         <li>Cinematic Quality</li>
