Update testimonial client name to Yash Shah

--- a/services.html
+++ b/services.html
@@ -223,7 +223,7 @@
                                 <img src="assets/images/testimonial/testimonial-2-1.jpg" alt="">
                             </div>
                             <div class="testimonial-two__client-info">
-                                <h3>Maklon H. Hilix</h3>
+                                <h3> Yash Shah </h3>
                             </div>
                         </div>
                     </div>
