--- a/services.html
+++ b/services.html
@@ -197,42 +197,95 @@
 
         <!--Feature One Start-->
 
+<!-- Testimonial Section Start -->
+<section class="testimonial-three">
+    <div class="container">
+        <div class="section-title text-left">
+            <p class="section-title__tagline">Testimonials</p>
+            <div class="section-title__title-box">
+                <h2 class="section-title__title">What Our Clients Say</h2>
+                <p>Real feedback from people we’ve worked with</p>
+            </div>
+        </div>
 
-        <!--Testimonial Two Start-->
-        <section class="testimonial-three">
-            <div class="container">
-                <div class="section-title text-left">
-                    <p class="section-title__tagline">Testimonials</p>
-                    <div class="section-title__title-box">
-                        <h2 class="section-title__title">Happy users</h2>
-                        <p>Users feedback</p>
-                    </div>
-                </div>
-                <div class="testimonial-three__bottom">
-                    <!-- Single Testimonial with Rating Only -->
-                    <div class="testimonial-two__single" style="max-width: 400px; margin: 0 auto;">
-                        <div class="testimonial-two__retting" style="margin-bottom: 15px;">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
+        <div class="testimonial-three__bottom">
+            <div class="row">
+
+                <!-- Testimonial 1 -->
+                <div class="col-xl-4 col-lg-4 col-md-6">
+                    <div class="testimonial-two__single">
+                        <div class="testimonial-two__retting">
+                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                         </div>
+                        <p class="testimonial-text">
+                            “The team understood our brief perfectly and delivered a video that exceeded expectations.”
+                        </p>
                         <div class="testimonial-two__client-img-and-info">
                             <div class="testimonial-two__client-img">
                                 <img src="assets/images/testimonial/testimonial-2-1.jpg" alt="">
                             </div>
                             <div class="testimonial-two__client-info">
-                                <h3> Yash Shah </h3>
+                                <h3>Yash Shah</h3>
+                                <span>Marketing Manager</span>
                             </div>
                         </div>
                     </div>
-                    <!-- Testimonial End -->
                 </div>
+
+                <!-- Testimonial 2 -->
+                <div class="col-xl-4 col-lg-4 col-md-6">
+                    <div class="testimonial-two__single">
+                        <div class="testimonial-two__retting">
+                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <p class="testimonial-text">
+                            “Professional, punctual, and creative. Our brand film turned out exactly how we imagined.”
+                        </p>
+                        <div class="testimonial-two__client-img-and-info">
+                            <div class="testimonial-two__client-img">
+                                <img src="assets/images/testimonial/testimonial-2-2.jpg" alt="">
+                            </div>
+                            <div class="testimonial-two__client-info">
+                                <h3>Rohit Mehta</h3>
+                                <span>Startup Founder</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Testimonial 3 -->
+                <div class="col-xl-4 col-lg-4 col-md-6">
+                    <div class="testimonial-two__single">
+                        <div class="testimonial-two__retting">
+                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <p class="testimonial-text">
+                            “Smooth coordination and great attention to detail. Highly recommended for video projects.”
+                        </p>
+                        <div class="testimonial-two__client-img-and-info">
+                            <div class="testimonial-two__client-img">
+                                <img src="assets/images/testimonial/testimonial-2-3.jpg" alt="">
+                            </div>
+                            <div class="testimonial-two__client-info">
+                                <h3>Ananya Kapoor</h3>
+                                <span>Brand Consultant</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
+        </div>
     </div>
-    </section>
-    <!--Testimonial Two End--> 
+</section>
+<!-- Testimonial Section End -->
+
     
     <!-- Pricing Section Start -->
 <section class="pricing-section">
