Remove testimonial section and update pricing currency
Removed testimonial section and updated pricing from USD to INR.

--- a/services.html
+++ b/services.html
@@ -196,96 +196,6 @@
         <!--Services Five End-->
 
         <!--Feature One Start-->
-
-<!-- Testimonial Section Start -->
-<section class="testimonial-three">
-    <div class="container">
-        <div class="section-title text-left">
-            <p class="section-title__tagline">Testimonials</p>
-            <div class="section-title__title-box">
-                <h2 class="section-title__title">What Our Clients Say</h2>
-                <p>Real feedback from people we’ve worked with</p>
-            </div>
-        </div>
-
-        <div class="testimonial-three__bottom">
-            <div class="row">
-
-                <!-- Testimonial 1 -->
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="testimonial-two__single">
-                        <div class="testimonial-two__retting">
-                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p class="testimonial-text">
-                            “The team understood our brief perfectly and delivered a video that exceeded expectations.”
-                        </p>
-                        <div class="testimonial-two__client-img-and-info">
-                            <div class="testimonial-two__client-img">
-                                <img src="assets/images/testimonial/testimonial-2-1.jpg" alt="">
-                            </div>
-                            <div class="testimonial-two__client-info">
-                                <h3>Yash Shah</h3>
-                                <span>Marketing Manager</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Testimonial 2 -->
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="testimonial-two__single">
-                        <div class="testimonial-two__retting">
-                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p class="testimonial-text">
-                            “Professional, punctual, and creative. Our brand film turned out exactly how we imagined.”
-                        </p>
-                        <div class="testimonial-two__client-img-and-info">
-                            <div class="testimonial-two__client-img">
-                                <img src="assets/images/testimonial/testimonial-2-2.jpg" alt="">
-                            </div>
-                            <div class="testimonial-two__client-info">
-                                <h3>Rohit Mehta</h3>
-                                <span>Startup Founder</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Testimonial 3 -->
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="testimonial-two__single">
-                        <div class="testimonial-two__retting">
-                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p class="testimonial-text">
-                            “Smooth coordination and great attention to detail. Highly recommended for video projects.”
-                        </p>
-                        <div class="testimonial-two__client-img-and-info">
-                            <div class="testimonial-two__client-img">
-                                <img src="assets/images/testimonial/testimonial-2-3.jpg" alt="">
-                            </div>
-                            <div class="testimonial-two__client-info">
-                                <h3>Ananya Kapoor</h3>
-                                <span>Brand Consultant</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Testimonial Section End -->
-
     
     <!-- Pricing Section Start -->
 <section class="pricing-section">
@@ -301,7 +211,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                 <div class="pricing-card starter">
                     <h3>Starter</h3>
-                    <div class="price">$1,500</div>
+                    <div class="price">₹1,00,000</div>
                     <ul>
                         <li>1 Minute Video</li>
                         <li>Basic Editing</li>
@@ -316,7 +226,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="200ms">
                 <div class="pricing-card professional active">
                     <h3>Professional</h3>
-                    <div class="price">$3,500</div>
+                    <div class="price">₹1,75,000</div>
                     <ul>
                         <li>3–4 Minute Video</li>
                         <li>Advanced Editing</li>
@@ -331,7 +241,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
                 <div class="pricing-card premium">
                     <h3>Premium</h3>
-                    <div class="price">$6,500</div>
+                    <div class="price">₹4,75,000/div>
                     <ul>
                         <li>5–7 Minute Video</li>
                         <li>Cinematic Quality</li>
