--- a/services.html
+++ b/services.html
@@ -161,7 +161,7 @@
                                     <div class="services-three__img">
                                         <img src="assets/images/immp/image 2.2.jpg" alt="">
                                     </div>
-                                    <h3 class="services-three__title"><a href="film-production.html">Videography</a>
+                                    <h3 class="services-three__title"><a href="film-production.html">Video Production</a>
                                     </h3>
                                 </div>
                                 <div class="services-three__content">
@@ -179,11 +179,10 @@
                                     <div class="services-three__img">
                                         <img src="assets/images/immp/image 2.3.jpg" alt="">
                                     </div>
-                                    <h3 class="services-three__title"><a href="content-production.html">Video
-                                            Solution</a></h3>
+                                    <h3 class="services-three__title"><a href="content-production.html">Aerial Filming</a></h3>
                                 </div>
                                 <div class="services-three__content">
-                                    <p class="services-three__text">Complete video solutions for your business.</p>
+                                    <p class="services-three__text">Complete aerial filming for your business.</p>
                                     <a href="content-production.html" class="services-three__read-more">Read More</a>
                                 </div>
                             </div>
