--- a/index.html
+++ b/index.html
@@ -181,25 +181,25 @@
             <div class="feature-two__inner">
                 <ul class="list-unstyled feature-two__list marquee_mode">
                     <li>
-                        <a href="#">Photography videography video solution</a>
+                        <a href="#">Photography Video Production Aerial Filming</a>
                         <div class="feature-two__img">
                             <img src="assets/images/resources/feature-two-img-1-1.jpg" alt="">
                         </div>
                     </li>
                     <li>
-                        <a href="#">Photography videography video solution</a>
+                        <a href="#">Photography Video Production Aerial Filming</a>
                         <div class="feature-two__img">
                             <img src="assets/images/resources/feature-two-img-1-2.jpg" alt="">
                         </div>
                     </li>
                     <li>
-                        <a href="#">Photography videography video solution</a>
+                        <a href="#">Photography Video Production Aerial Filming</a>
                         <div class="feature-two__img">
                             <img src="assets/images/resources/feature-two-img-1-3.jpg" alt="">
                         </div>
                     </li>
                     <li>
-                        <a href="#">Photography videography video solution</a>
+                        <a href="#">Photography Video Production Aerial Filming</a>
                         <div class="feature-two__img">
                             <img src="assets/images/resources/feature-two-img-1-4.jpg" alt="">
                         </div>
@@ -267,11 +267,11 @@
                                     <div class="services-three__img">
                                         <img src="assets/images/immp/image 2.2.jpg" alt="">
                                     </div>
-                                    <h3 class="services-three__title"><a href="film-production.html">Videography</a>
+                                    <h3 class="services-three__title"><a href="film-production.html">Video Production</a>
                                     </h3>
                                 </div>
                                 <div class="services-three__content">
-                                    <p class="services-three__text">High-quality videography to capture your moments.
+                                    <p class="services-three__text">High-quality videography and seamless production to capture your moments.
                                     </p>
                                     <a href="film-production.html" class="services-three__read-more">Read More</a>
                                 </div>
@@ -285,11 +285,10 @@
                                     <div class="services-three__img">
                                         <img src="assets/images/immp/image 2.3.jpg" alt="">
                                     </div>
-                                    <h3 class="services-three__title"><a href="content-production.html">Video
-                                            Solution</a></h3>
+                                    <h3 class="services-three__title"><a href="content-production.html">Aerial Filming</a></h3>
                                 </div>
                                 <div class="services-three__content">
-                                    <p class="services-three__text">Complete video solutions for your business.</p>
+                                    <p class="services-three__text">Complete aerial filming for your business.</p>
                                     <a href="content-production.html" class="services-three__read-more">Read More</a>
                                 </div>
                             </div>
