Update services in about.html for clarity

--- a/about.html
+++ b/about.html
@@ -197,7 +197,7 @@
                                 </div>
                             </div>
                             <p class="about-two__text">We are a premier production house offering Photography,
-                                Videography, and complete Video Solutions. At Fourth Wall Communications, we bring your
+                                Video Production, and Aerial Filming. At Fourth Wall Communications, we bring your
                                 vision to life with creativity, technical excellence, and a passion for storytelling.
                             </p>
                             <div class="about-three__btn-box">
@@ -260,7 +260,7 @@
                                         <img src="assets/images/icon/services-two-hover-icon-2.png" alt="">
                                     </div>
                                 </div>
-                                <h3 class="services-two__title"><a href="film-production.html">Videography</a></h3>
+                                <h3 class="services-two__title"><a href="film-production.html">Video Production</a></h3>
                                 <p class="services-two__text">High-quality videography to capture your special moments
                                     and events.</p>
                             </div>
@@ -273,8 +273,8 @@
                                         <img src="assets/images/icon/services-two-hover-icon-3.png" alt="">
                                     </div>
                                 </div>
-                                <h3 class="services-two__title"><a href="voice-production.html">Video Solution</a></h3>
-                                <p class="services-two__text">Complete video solutions from concept to delivery.</p>
+                                <h3 class="services-two__title"><a href="voice-production.html">Aerial Filming</a></h3>
+                                <p class="services-two__text">Complete Aerial Filming from concept to delivery.</p>
                             </div>
                         </li>
                     </ul>
@@ -335,8 +335,10 @@
                                 </div>
                                 <ul class="footer-widget__services-list list-unstyled">
                                     <li><a href="#">Photography</a></li>
-                                    <li><a href="#">Videography</a></li>
-                                    <li><a href="#">Video Solution</a></li>
+                                    <li><a href="#">Video Production</a></li>
+                                    <li><a href="#">Aerial Production</a></li>
+
+                                    
                                 </ul>
                             </div>
                         </div>
