--- a/services.html
+++ b/services.html
@@ -284,8 +284,8 @@
                             </div>
                             <ul class="footer-widget__services-list list-unstyled">
                                 <li><a href="#">Photography</a></li>
-                                <li><a href="#">Videography</a></li>
-                                <li><a href="#">Video Solution</a></li>
+                                <li><a href="#">Video Production</a></li>
+                                <li><a href="#">Aerial Filming</a></li>
                             </ul>
                         </div>
                     </div>
